--- a/config/dpkg/rules
+++ b/config/dpkg/rules
@@ -10,7 +10,7 @@ override_dh_auto_test:
 override_dh_auto_install:
 	dh_auto_install
 	mkdir -p debian/tmp/usr/share/plaso/
-	mv debian/tmp/usr/lib/python*/dist-packages/plaso/data/* debian/tmp/usr/share/plaso/
-	rmdir debian/tmp/usr/lib/python*/dist-packages/plaso/data
+	mv -n debian/tmp/usr/lib/python*/dist-packages/plaso/data/* debian/tmp/usr/share/plaso
+	rm -rf debian/tmp/usr/lib/python*/dist-packages/plaso/data
 	find debian/tmp/usr/bin/ -type f -exec mv {} {}.py \;
 
